--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,27 @@ blinker==1.9.0
 click==8.1.7
 cloudpickle==3.1.1
 colorama==0.4.6
+Farama-Notifications==0.0.4
+filelock==3.17.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+fsspec==2025.2.0
 gym==0.26.2
 gym-notices==0.0.8
+gymnasium==1.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.2.3
+pillow==11.1.0
+pygame==2.6.1
+setuptools==75.8.0
 SQLAlchemy==2.0.36
+sympy==1.13.1
+torch==2.6.0
+torchvision==0.21.0
 typing_extensions==4.12.2
 Werkzeug==3.1.3
