--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,44 @@ blinker==1.9.0
 click==8.1.7
 cloudpickle==3.1.1
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.2.1
 Farama-Notifications==0.0.4
 filelock==3.17.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+fonttools==4.56.0
 fsspec==2025.2.0
 gym==0.26.2
 gym-notices==0.0.8
 gymnasium==1.0.0
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.0
+moviepy==2.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.3
-pillow==11.1.0
+opencv-python==4.11.0.86
+packaging==24.2
+pillow==10.4.0
+proglog==0.1.10
 pygame==2.6.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 setuptools==75.8.0
+six==1.17.0
 SQLAlchemy==2.0.36
 sympy==1.13.1
 torch==2.6.0
 torchvision==0.21.0
+tqdm==4.67.1
 typing_extensions==4.12.2
 Werkzeug==3.1.3
